[gd_scene load_steps=7 format=3 uid="uid://bi7i031lr2e7v"]

[ext_resource type="Script" path="res://playing_field.gd" id="1_cl3ci"]
[ext_resource type="Shader" path="res://shaders/vhs.gdshader" id="2_go70g"]
[ext_resource type="PackedScene" uid="uid://cqwbrqx1dkacu" path="res://ball/ball.tscn" id="3_iih04"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ixuef"]
shader = ExtResource("2_go70g")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.385
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 3.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 1.194
shader_parameter/distort_intensity = 0.01
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.03
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.2
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yu47y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3dvou"]

[node name="PlayingField" type="Node2D"]
script = ExtResource("1_cl3ci")

[node name="Score" type="CanvasLayer" parent="."]

[node name="Overlay" type="Control" parent="Score"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RetroEffect" type="ColorRect" parent="Score/Overlay"]
material = SubResource("ShaderMaterial_ixuef")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerOneScore" type="Label" parent="Score/Overlay"]
unique_name_in_owner = true
z_index = -1
layout_mode = 0
offset_right = 45.0
offset_bottom = 71.0
theme_override_font_sizes/font_size = 45
text = "0"

[node name="PlayerTwoScore" type="Label" parent="Score/Overlay"]
unique_name_in_owner = true
z_index = -1
layout_mode = 0
offset_right = 45.0
offset_bottom = 71.0
theme_override_font_sizes/font_size = 45
text = "0"

[node name="TopBoundaryLimit" type="StaticBody2D" parent="."]

[node name="TopBoundary" type="CollisionShape2D" parent="TopBoundaryLimit"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_yu47y")

[node name="BottomBoundaryLimit" type="StaticBody2D" parent="."]

[node name="BottomBoundary" type="CollisionShape2D" parent="BottomBoundaryLimit"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_3dvou")

[node name="Ball" parent="." groups=["ball"] instance=ExtResource("3_iih04")]
